<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/bg_splashimg"
    android:layout_height="match_parent">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/idlogo"
        android:gravity="center"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_centerInParent="true"
            android:src="@drawable/logotop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <ImageView
            android:layout_centerInParent="true"
            android:src="@drawable/logomiddle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <ImageView
            android:layout_marginTop="-10dp"
            android:layout_centerInParent="true"
            android:src="@drawable/logobottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>


    <com.mazlow.customclasses.MediumTextView
        android:id="@+id/tv_title"
        android:layout_below="@+id/idlogo"
        android:textColor="@color/white"
        android:textSize="40dp"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:text="@string/MasLife"
        android:layout_height="wrap_content"/>
    <com.mazlow.customclasses.MediumButton
        android:id="@+id/btn_login"
        android:layout_marginTop="@dimen/margin15"
        android:layout_below="@+id/tv_title"
        android:textColor="@color/textcolor"
        android:textSize="@dimen/TitleTexthightlight"
        android:background="@drawable/btn_shape"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:text="@string/login"
        android:paddingLeft="@dimen/_60sdp"
        android:paddingRight="@dimen/_60sdp"
        android:textAllCaps="false"
        android:layout_height="@dimen/_35sdp"/>
    <com.mazlow.customclasses.MediumTextView
        android:id="@+id/tv_join"
        android:layout_marginTop="@dimen/margin15"
        android:layout_below="@+id/btn_login"
        android:textColor="@color/white"
        android:textSize="@dimen/_15sdp"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:text="@string/join_MasLife"
        android:textAllCaps="false"
        android:layout_height="40dp"/>




</RelativeLayout>

</RelativeLayout>