<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mazlow.payments_subscription.activities.select_cards.SelectCards">




    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:gravity="center"
                >
                <com.mazlow.customclasses.MediumTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/light_blue"
                    android:gravity="center"
                    android:textSize="@dimen/_14sdp"
                    android:text="@string/select_your_card"
                    />
            </LinearLayout>



            <com.mazlow.customclasses.KKViewPager
                android:id="@+id/viewPager"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_150sdp"
                android:layout_centerInParent="true"
                android:layout_marginTop="@dimen/_4sdp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="@dimen/_10sdp"
                >
                <com.mazlow.customclasses.MediumTextView
                    android:layout_width="wrap_content"
                    android:gravity="center"
                    android:id="@+id/textViewCardName"
                    android:layout_height="wrap_content"
                    android:textAllCaps="true"
                    android:textColor="@color/light_blue"
                    android:textSize="@dimen/_18sdp"
                    android:text="@string/premiu_metal"
                    />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageViewInfo"
                    android:layout_marginLeft="@dimen/_8sdp"
                    android:src="@drawable/ic_clear_black_24dp"
                    />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@color/gray_color"
                />

            <com.mazlow.customclasses.MediumTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textViewCardDescription"
                android:text="@string/you_will_get_access_to_mazlow_s_full_range_of_feature"
                android:gravity="center"
                android:layout_marginTop="@dimen/_10sdp"
                android:textColor="@color/light_blue"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:id="@+id/linearLayoutCard"
                android:gravity="center"
                >

                <RelativeLayout
                    android:layout_width="@dimen/_120sdp"
                    android:layout_height="@dimen/_60sdp"
                    android:id="@+id/relativeLayoutMonthly"
                    android:layout_marginRight="@dimen/_8sdp"
                    >

                    <LinearLayout
                        android:layout_width="@dimen/_120sdp"
                        android:layout_height="@dimen/_60sdp"
                        android:paddingTop="@dimen/_10sdp"
                        android:id="@+id/linearLayoutMonthly"
                        android:layout_marginRight="@dimen/_6sdp"
                        android:paddingBottom="@dimen/_10sdp"
                        android:paddingLeft="@dimen/_10sdp"
                        android:gravity="center"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:orientation="vertical"
                        android:background="@drawable/shape_rectangle_black_stroke"
                        android:paddingRight="@dimen/_10sdp"
                        >


                        <com.mazlow.customclasses.MediumTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/monthly"
                            android:id="@+id/textViewMonthlty"
                            android:textColor="@color/light_blue"
                            />

                    </LinearLayout>

                    <ImageView
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:id="@+id/imageViewTickMonthly"
                        android:layout_alignParentRight="true"
                        android:src="@drawable/ic_tick"
                        />



                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="@dimen/_120sdp"
                    android:layout_height="@dimen/_60sdp"
                    android:layout_marginLeft="@dimen/_8sdp"
                    android:id="@+id/relativeLayoutAnnual"
                    >

                    <LinearLayout
                        android:layout_width="@dimen/_120sdp"
                        android:layout_height="@dimen/_60sdp"
                        android:id="@+id/linearLayoutAnnual"
                        android:paddingTop="@dimen/_10sdp"
                        android:layout_marginRight="@dimen/_6sdp"
                        android:paddingBottom="@dimen/_10sdp"
                        android:paddingLeft="@dimen/_10sdp"
                        android:gravity="center"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:orientation="vertical"
                        android:background="@drawable/shape_rectangle_black_stroke"
                        android:paddingRight="@dimen/_10sdp"
                        >


                        <com.mazlow.customclasses.MediumTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/annual"
                            android:id="@+id/textViewAnnual"
                            android:textColor="@color/light_blue"
                            />
                        <com.mazlow.customclasses.MediumTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="(10 % Discount)"
                            android:id="@+id/textViewAnnualDiscount"
                            android:textColor="@color/light_blue"
                            />

                    </LinearLayout>

                    <ImageView
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:id="@+id/imageViewTickAnnual"
                        android:layout_alignParentRight="true"
                        android:src="@drawable/ic_tick"
                        />


                </RelativeLayout>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="@dimen/_15sdp"
                >

                <com.mazlow.customclasses.MediumTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_19sdp"
                    android:textColor="@color/blue_color"
                    android:id="@+id/textViewPrice"
                    android:text="£199.00"
                    />

                <com.mazlow.customclasses.MediumTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_16sdp"
                    android:id="@+id/textViewSubscriptionType"
                    android:layout_marginLeft="@dimen/_8sdp"
                    android:textColor="@color/blue_color"
                    android:text="/year"
                    />
            </LinearLayout>

            <com.mazlow.customclasses.MediumTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/your_monthly_fee_will_be_taken_out_of_your_mazlow_account_after_topping_up_and_each_month_around_the_10th"
                android:gravity="center"
                android:id="@+id/textViewDiscription"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:textColor="@color/light_blue"
                />




            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:orientation="horizontal"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:paddingLeft="@dimen/_8sdp"
                android:gravity="center_vertical"
                android:paddingRight="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/continue_btn">
                <com.mazlow.customclasses.MediumEdittext
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:id="@+id/editTextReferralCode"
                    android:layout_weight="1"
                    android:inputType="text"
                    android:textColor="@color/blue_color"
                    android:hint="@string/enter_referral_code"
                    android:layout_marginLeft="@dimen/_15sdp"
                    android:layout_marginRight="@dimen/_15sdp">
                </com.mazlow.customclasses.MediumEdittext>

                <com.mazlow.customclasses.MediumTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/apply"
                    android:id="@+id/textViewApply"
                    android:textColor="@color/blue_color"
                    />

            </LinearLayout>
            <com.mazlow.customclasses.MediumTextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:id="@+id/textViewContinue"
                android:background="@drawable/continue_btn"
                android:layout_marginTop="@dimen/_20sdp"
                android:inputType="text"
                android:text="@string/continue_top_up"
                android:gravity="center"
                android:layout_marginBottom="@dimen/_10sdp"
                android:textSize="@dimen/_16sdp"
                android:textColor="@color/blue_color"
                android:layout_marginLeft="@dimen/_15sdp"
                android:layout_marginRight="@dimen/_15sdp">
            </com.mazlow.customclasses.MediumTextView>

        </LinearLayout>


    </ScrollView>



</LinearLayout>
